2008-04-13 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_photo.c (gphoto_is_photo_playlist,
          gphoto_ipod_supports_photos, gphoto_display_photo_window,
          debug_list_photos): prevent segfault if called with NULL
          argument.

	  (gphoto_add_image_to_database,
	  gphoto_add_image_to_iconview): sanity checks

	* context_menus.c (pm_context_menu_init): check for selected
          playlist before making further checks. Thanks to Alex
          Pounds.

	* po/de.po: updated German translation. Thanks to Kai-Ove
          Pietsch.


2008-04-09 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* scripts/sync-tomboy.sh
	  (Olivier Crete <tester at tester dot ca>):
	  Strip all tomboy tags with the power of sed

2008-04-09 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_convert.c (transfer_transfer_track): removed
          unnecessary g_mutex_unlock(). Thanks to Klaus Heinz.

2008-03-29  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* configure.in: Remove unused references to libgnomecanvas

	* configure.in: Handle the case where LEX is a path, from
	  NetBSD via Klaus Heinz (fixes SF tracker #1920207)

2008-03-17 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * src/display_photo.c
  * src/misc_input.c
  
    Fix for segfault in get_user_string function.

2007-12-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp4file.c
	* src/file.c: applied chapterdata patch by Michael Tiffany

2008-01-13 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/gtkpod.glade:
  * src/prefs.c:
  * src/prefsdlg.c:
  * src/file.c:
  
    Support for video thumbnail generation via totem-video-thumbnailer
    (patch by M. Sean Finney <seanius@seanius.net>).

2008-01-06 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/gtkpod.glade:
  * src/display.h:
  * src/display_tracks.c:
  * src/display_sorttabs.c:
  * src/prefsdlg.c:
  
    Made the "Filter tab position" and "Horizontal scrollbar" preferences